# ariel-os

./: Cargo.toml  laze-project.yml
.github/workflows/: build-deploy-docs.yml  main.yml
doc/: support_matrix.yml
examples/: laze.yml
examples/blinky/: Cargo.toml  laze.yml
examples/blinky/src/: main.rs  pins.rs
examples/gpio/src/: pins.rs
examples/pwr-mgmt/: Cargo.toml  laze.yml
examples/pwr-mgmt/src/: main.rs
src/ariel-os/: Cargo.toml
src/ariel-os-boards/: Cargo.toml
src/ariel-os-boards/src/: lib.rs
src/ariel-os-boards/thingy53/: Cargo.toml
src/ariel-os-boards/thingy53/src/: lib.rs
src/ariel-os-nrf/: Cargo.toml
src/ariel-os-pm/: Cargo.toml
src/ariel-os-pm/src/: lib.rs
src/ariel-os-stm32/src/spi/main/: mod.rs
src/ariel-os/src/: lib.rs
tests/coap-blinky/: laze.yml
